--- a/Notes.APP/Notes.APP/Pages/HomePage.xaml
+++ b/Notes.APP/Notes.APP/Pages/HomePage.xaml
@@ -21,7 +21,7 @@
             HorizontalScrollBarVisibility="Hidden"
             ShowLineNumbers="True"
             SyntaxHighlighting="C#"
-            TextChanged="txtContent_TextChanged_1"
+            TextChanged="txtContent_TextChanged"
             VerticalScrollBarVisibility="Hidden"
             WordWrap="True" />
         <!--<TextBox
