--- a/Notes.APP/Notes.APP/ListWindow.xaml
+++ b/Notes.APP/Notes.APP/ListWindow.xaml
@@ -92,6 +92,7 @@
                             Grid.Column="0"
                             Width="30"
                             Height="30"
+                            Padding="0"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Background="Transparent"
@@ -119,6 +120,7 @@
                                     Grid.Column="0"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Background="Transparent"
@@ -132,6 +134,7 @@
                                     Grid.Column="1"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Background="Transparent"
@@ -145,6 +148,7 @@
                                     Grid.Column="2"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Background="Transparent"
@@ -157,6 +161,7 @@
                                     Grid.Column="3"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="CloseButton_Click"
