--- a/Notes.APP/Notes.APP/App.xaml
+++ b/Notes.APP/Notes.APP/App.xaml
@@ -1,11 +1,22 @@
-﻿<Application x:Class="Notes.APP.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Notes.APP"
-             StartupUri="ListWindow.xaml">
-
+﻿<Application
+    x:Class="Notes.APP.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:local="clr-namespace:Notes.APP"
+    StartupUri="ListWindow.xaml">
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
     <!--<Application.Resources>
-        --><!-- 定义Thumb的样式 --><!--
+    -->
+    <!--  定义Thumb的样式  -->
+    <!--
         <Style x:Key="ScrollBarThumb" TargetType="Thumb">
             <Setter Property="Background" Value="DarkBlue"/>
             <Setter Property="BorderBrush" Value="Black"/>
@@ -19,7 +30,9 @@
             </Setter>
         </Style>
 
-        --><!-- 定义RepeatButton的样式 --><!--
+    -->
+    <!--  定义RepeatButton的样式  -->
+    <!--
         <Style x:Key="ScrollBarButton" TargetType="RepeatButton">
             <Setter Property="Background" Value="LightGray"/>
             <Setter Property="Foreground" Value="DarkBlue"/>
@@ -36,7 +49,9 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        --><!-- 定义ScrollBar的样式 --><!--
+    -->
+    <!--  定义ScrollBar的样式  -->
+    <!--
         <Style TargetType="ScrollBar">
             <Setter Property="Background" Value="LightGray"/>
             <Setter Property="Foreground" Value="DarkBlue"/>
@@ -62,25 +77,31 @@
             </Setter>
         </Style>
 
-       
+
     </Application.Resources>-->
 
     <!--<Application.Resources>
-        --><!-- 自定义 ScrollBar 样式，隐藏滚动条 --><!--
+    -->
+    <!--  自定义 ScrollBar 样式，隐藏滚动条  -->
+    <!--
         <Style TargetType="ScrollBar">
             <Setter Property="Width" Value="5" />
             <Setter Property="Height" Value="0" />
             <Setter Property="Visibility" Value="Collapsed" />
         </Style>
-        --><!-- 自定义 TextBox 样式 --><!--
+    -->
+    <!--  自定义 TextBox 样式  -->
+    <!--
         <Style TargetType="TextBox">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="TextBox">
                         <Border Background="{TemplateBinding Background}" BorderThickness="1" CornerRadius="0,0,10,10" >
-                            --><!-- 必须包含 PART_ContentHost，以保留输入和滚动功能 --><!--
-                            <ScrollViewer x:Name="PART_ContentHost" 
-                                  VerticalScrollBarVisibility="Hidden" 
+    -->
+    <!--  必须包含 PART_ContentHost，以保留输入和滚动功能  -->
+    <!--
+                            <ScrollViewer x:Name="PART_ContentHost"
+                                  VerticalScrollBarVisibility="Hidden"
                                   HorizontalScrollBarVisibility="Hidden" />
                         </Border>
                     </ControlTemplate>
