--- a/Notes.APP/Notes.APP/MainWindow.xaml
+++ b/Notes.APP/Notes.APP/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="Notes.APP.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:Notes.APP.CustomCtrls"
     xmlns:tb="http://www.hardcodet.net/taskbar"
     xmlns:xc="http://schemas.xceed.com/wpf/xaml/toolkit"
@@ -110,10 +111,16 @@
                             FontSize="16"
                             Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             MouseLeftButtonDown="TextButton_Click" />-->
+                        <!--<hc:ContextMenuButton
+                            Grid.Column="0"
+                            Background="Transparent"
+                            Content="&#xE948;"
+                            FontFamily="Segoe MDL2 Assets" />-->
                         <Button
                             Grid.Column="0"
                             Width="30"
                             Height="30"
+                            Padding="0"
                             Background="Transparent"
                             BorderThickness="0"
                             Click="TextButton_Click"
@@ -121,9 +128,11 @@
                             FontFamily="Segoe MDL2 Assets"
                             FontSize="18"
                             Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
                         <!--  右侧按钮  -->
                         <TextBlock
                             Grid.Column="1"
+                            Padding="0"
                             VerticalAlignment="Center"
                             FontSize="14"
                             FontWeight="Bold"
@@ -148,6 +157,7 @@
                                     Grid.Column="0"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="Fix_Click"
@@ -159,6 +169,7 @@
                                     Grid.Column="1"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="More_Click"
@@ -172,12 +183,13 @@
                                     Grid.Column="2"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="CollapseButton_Click"
-                                    Content="&#xE70E;"
+                                    Content="&#xE70D;"
                                     FontFamily="Segoe MDL2 Assets"
                                     FontSize="16"
                                     Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -186,6 +198,7 @@
                                     Grid.Column="3"
                                     Width="30"
                                     Height="30"
+                                    Padding="0"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="MinimizeButton_Click"
@@ -230,6 +243,7 @@
                                 x:Name="MainFrame"
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch"
+                                BorderBrush="Transparent"
                                 NavigationUIVisibility="Hidden" />
                         </Border>
                     </Grid>
@@ -375,8 +389,14 @@
                             Foreground="#000"
                             Text="透明度" />
                         <!--  透明度  -->
-
-                        <Slider
+                        <!--<hc:RangeSlider Grid.Row="5" />-->
+                        <hc:PreviewSlider
+                            Grid.Row="5"
+                            Maximum="1"
+                            Minimum="0.1"
+                            SizeChanged="PreviewSlider_SizeChanged"
+                            Value="{Binding Opacity}" />
+                        <!--<Slider
                             Grid.Row="5"
                             Width="130"
                             HorizontalAlignment="Center"
@@ -388,7 +408,9 @@
                             <Slider.Template>
                                 <ControlTemplate TargetType="Slider">
                                     <Grid>
-                                        <!--  Track  -->
+                        -->
+                        <!--  Track  -->
+                        <!--
                                         <Track Name="PART_Track" IsDirectionReversed="False">
                                             <Track.DecreaseRepeatButton>
                                                 <RepeatButton Command="Slider.DecreaseLarge" />
@@ -407,7 +429,7 @@
                                 </ControlTemplate>
                             </Slider.Template>
 
-                        </Slider>
+                        </Slider>-->
                         <!--  置顶  -->
                         <!--<StackPanel
                             Grid.Row="4"
@@ -427,6 +449,27 @@
                                 Text="窗口置顶" />
                         </StackPanel>-->
                         <!--  查看列表  -->
+                        <Grid
+                            Grid.Row="6"
+                            HorizontalAlignment="Stretch"
+                            Background="Transparent"
+                            MouseLeftButtonUp="Export_MouseLeftButtonDown">
+                            <StackPanel
+                                Margin="5,0,5,10"
+                                VerticalAlignment="Bottom"
+                                Orientation="Horizontal">
+                                <TextBlock
+                                    Margin="0,0,10,0"
+                                    VerticalAlignment="Center"
+                                    FontFamily="Segoe MDL2 Assets"
+                                    FontSize="16"
+                                    Text="&#xE896;" />
+                                <TextBlock
+                                    VerticalAlignment="Center"
+                                    FontSize="14"
+                                    Text="导出内容" />
+                            </StackPanel>
+                        </Grid>
                         <Grid
                             Grid.Row="7"
                             HorizontalAlignment="Stretch"
